--- a/examples/qedc_deutsch_jozsa_execution.ipynb
+++ b/examples/qedc_deutsch_jozsa_execution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "18e85721",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "75b09e9c",
    "metadata": {},
    "outputs": [],
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f49c3c4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a constant oracle, appending gates to given circuit\n",
-    "def constant_oracle (input_size, num_qubits):\n",
-    "    #Initialize first n qubits and single ancilla qubit\n",
+    "def constant_oracle(input_size, num_qubits):\n",
+    "    # Initialize first n qubits and single ancilla qubit\n",
     "    qc = QuantumCircuit(num_qubits, name=f\"Uf\")\n",
     "\n",
     "    output = np.random.randint(2)\n",
@@ -63,14 +63,15 @@
     "\n",
     "    global C_ORACLE_\n",
     "    if C_ORACLE_ == None or num_qubits <= 6:\n",
-    "        if num_qubits < 9: C_ORACLE_ = qc\n",
+    "        if num_qubits < 9:\n",
+    "            C_ORACLE_ = qc\n",
     "\n",
     "    return qc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0ddebead",
    "metadata": {},
    "outputs": [],
@@ -78,13 +79,13 @@
     "# Create a balanced oracle.\n",
     "# Perform CNOTs with each input qubit as a control and the output bit as the target.\n",
     "# Vary the input states that give 0 or 1 by wrapping some of the controls in X-gates.\n",
-    "def balanced_oracle (input_size, num_qubits):\n",
-    "    #Initialize first n qubits and single ancilla qubit\n",
+    "def balanced_oracle(input_size, num_qubits):\n",
+    "    # Initialize first n qubits and single ancilla qubit\n",
     "    qc = QuantumCircuit(num_qubits, name=f\"Uf\")\n",
     "\n",
-    "    b_str = \"10101010101010101010\"              # permit input_string up to 20 chars\n",
+    "    b_str = \"10101010101010101010\"  # permit input_string up to 20 chars\n",
     "    for qubit in range(input_size):\n",
-    "        if b_str[qubit] == '1':\n",
+    "        if b_str[qubit] == \"1\":\n",
     "            qc.x(qubit)\n",
     "\n",
     "    qc.barrier()\n",
@@ -95,64 +96,70 @@
     "    qc.barrier()\n",
     "\n",
     "    for qubit in range(input_size):\n",
-    "        if b_str[qubit] == '1':\n",
+    "        if b_str[qubit] == \"1\":\n",
     "            qc.x(qubit)\n",
     "\n",
     "    global B_ORACLE_\n",
     "    if B_ORACLE_ == None or num_qubits <= 6:\n",
-    "        if num_qubits < 9: B_ORACLE_ = qc\n",
+    "        if num_qubits < 9:\n",
+    "            B_ORACLE_ = qc\n",
     "\n",
     "    return qc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "851cac4e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create benchmark circuit\n",
-    "def DeutschJozsa (num_qubits, type):\n",
-    "    \n",
+    "def DeutschJozsa(num_qubits, type):\n",
+    "\n",
     "    # Size of input is one less than available qubits\n",
     "    input_size = num_qubits - 1\n",
     "\n",
     "    # allocate qubits\n",
-    "    qr = QuantumRegister(num_qubits); cr = ClassicalRegister(input_size); qc = QuantumCircuit(qr, cr, name=\"main\")\n",
+    "    qr = QuantumRegister(num_qubits)\n",
+    "    cr = ClassicalRegister(input_size)\n",
+    "    qc = QuantumCircuit(qr, cr, name=\"main\")\n",
     "\n",
     "    for qubit in range(input_size):\n",
     "        qc.h(qubit)\n",
     "    qc.x(input_size)\n",
     "    qc.h(input_size)\n",
-    "    \n",
+    "\n",
     "    qc.barrier()\n",
-    "    \n",
+    "\n",
     "    # Add a constant or balanced oracle function\n",
-    "    if type == 0: Uf = constant_oracle(input_size, num_qubits)\n",
-    "    else: Uf = balanced_oracle(input_size, num_qubits)\n",
+    "    if type == 0:\n",
+    "        Uf = constant_oracle(input_size, num_qubits)\n",
+    "    else:\n",
+    "        Uf = balanced_oracle(input_size, num_qubits)\n",
     "    qc.append(Uf, qr)\n",
     "\n",
     "    qc.barrier()\n",
-    "    \n",
+    "\n",
     "    for qubit in range(num_qubits):\n",
     "        qc.h(qubit)\n",
-    "    \n",
+    "\n",
     "    # uncompute ancilla qubit, not necessary for algorithm\n",
     "    qc.x(input_size)\n",
-    "    \n",
+    "\n",
     "    qc.barrier()\n",
-    "    \n",
+    "\n",
     "    for i in range(input_size):\n",
     "        qc.measure(i, i)\n",
-    "    \n",
+    "\n",
     "    # save smaller circuit and oracle subcircuit example for display\n",
     "    global QC_\n",
     "    if QC_ == None or num_qubits <= 6:\n",
-    "        if num_qubits < 9: QC_ = qc\n",
+    "        if num_qubits < 9:\n",
+    "            QC_ = qc\n",
     "\n",
     "    # return a handle to the circuit\n",
-    "    return qc\n"
+    "    return qc"
    ]
   },
   {
@@ -165,33 +172,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8651a562",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Analyze and print measured results\n",
     "# Expected result is always the type, so fidelity calc is simple\n",
-    "def analyze_and_print_result (qc, result, num_qubits, type, num_shots):\n",
-    "    \n",
+    "def analyze_and_print_result(qc, result, num_qubits, type, num_shots):\n",
+    "\n",
     "    # Size of input is one less than available qubits\n",
     "    input_size = num_qubits - 1\n",
     "\n",
     "    # obtain counts from the result object\n",
     "    counts = result.get_counts(qc)\n",
-    "    if verbose: print(f\"For type {type} measured: {counts}\")\n",
-    "    \n",
+    "    if verbose:\n",
+    "        print(f\"For type {type} measured: {counts}\")\n",
+    "\n",
     "    # create the key that is expected to have all the measurements (for this circuit)\n",
-    "    if type == 0: key = '0'*input_size\n",
-    "    else: key = '1'*input_size\n",
-    "    \n",
+    "    if type == 0:\n",
+    "        key = \"0\" * input_size\n",
+    "    else:\n",
+    "        key = \"1\" * input_size\n",
+    "\n",
     "    # correct distribution is measuring the key 100% of the time\n",
     "    correct_dist = {key: 1.0}\n",
     "\n",
     "    # use our polarization fidelity rescaling\n",
     "    fidelity = metrics.polarization_fidelity(counts, correct_dist)\n",
     "\n",
-    "    return counts, fidelity\n"
+    "    return counts, fidelity"
    ]
   },
   {
@@ -204,85 +214,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "d3b8d7b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import qiskit\n",
+    "\n",
+    "import qiskit_superstaq as qss\n",
+    "\n",
+    "# SuperstaQ token retrieved through API\n",
+    "token = \"3a1655771c3b2f3f61caa4f73c79c0372b30cf50b39663d203d07488b73a2cc3\"\n",
+    "\n",
+    "# Create provider using authorization token\n",
+    "superstaq = qss.SuperstaQProvider(token)\n",
+    "\n",
+    "# Retrieve backend from superstaq provider\n",
+    "backend = superstaq.get_backend(\"ibmq_qasm_simulator\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "d98f1ae6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Execute program with default parameters\n",
-    "def run (min_qubits=3, max_qubits=8, max_circuits=3, num_shots=100,\n",
-    "        backend_id='qasm_simulator', provider_backend=None,\n",
-    "        hub=\"ibm-q\", group=\"open\", project=\"main\", exec_options=None):\n",
+    "def run(\n",
+    "    min_qubits=3,\n",
+    "    max_qubits=8,\n",
+    "    max_circuits=3,\n",
+    "    num_shots=100,\n",
+    "    backend_id=\"qasm_simulator\",\n",
+    "    provider_backend=None,\n",
+    "    hub=\"ibm-q\",\n",
+    "    group=\"open\",\n",
+    "    project=\"main\",\n",
+    "    exec_options=None,\n",
+    "):\n",
     "\n",
     "    print(\"Deutsch-Jozsa Benchmark Program - Qiskit\")\n",
     "\n",
     "    # validate parameters (smallest circuit is 3 qubits)\n",
     "    max_qubits = max(3, max_qubits)\n",
     "    min_qubits = min(max(3, min_qubits), max_qubits)\n",
-    "    #print(f\"min, max qubits = {min_qubits} {max_qubits}\")\n",
-    "    \n",
+    "    # print(f\"min, max qubits = {min_qubits} {max_qubits}\")\n",
+    "\n",
     "    # Initialize metrics module\n",
     "    metrics.init_metrics()\n",
     "\n",
     "    # Define custom result handler\n",
-    "    def execution_handler (qc, result, num_qubits, type, num_shots):  \n",
-    "     \n",
-    "        # determine fidelity of result set\n",
-    "        num_qubits = int(num_qubits)\n",
-    "        counts, fidelity = analyze_and_print_result(qc, result, num_qubits, int(type), num_shots)\n",
-    "        metrics.store_metric(num_qubits, type, 'fidelity', fidelity)\n",
+    "#     def execution_handler(qc, result, num_qubits, type, num_shots):\n",
     "\n",
-    "    # Initialize execution module using the execution result handler above and specified backend_id\n",
-    "    ex.init_execution(execution_handler)\n",
-    "    ex.set_execution_target(backend_id, provider_backend=provider_backend,\n",
-    "            hub=hub, group=group, project=project, exec_options=exec_options)\n",
-    "    \n",
+    "#         # determine fidelity of result set\n",
+    "#         num_qubits = int(num_qubits)\n",
+    "#         counts, fidelity = analyze_and_print_result(qc, result, num_qubits, int(type), num_shots)\n",
+    "#         metrics.store_metric(num_qubits, type, \"fidelity\", fidelity)\n",
+    "\n",
+    "#     # Initialize execution module using the execution result handler above and specified backend_id\n",
+    "#     ex.init_execution(execution_handler)\n",
+    "#     ex.set_execution_target(\n",
+    "#         backend_id,\n",
+    "#         provider_backend=provider_backend,\n",
+    "#         hub=hub,\n",
+    "#         group=group,\n",
+    "#         project=project,\n",
+    "#         exec_options=exec_options,\n",
+    "#     )\n",
+    "\n",
     "    # Execute Benchmark Program N times for multiple circuit sizes\n",
     "    # Accumulate metrics asynchronously as circuits complete\n",
     "    for num_qubits in range(min_qubits, max_qubits + 1):\n",
-    "    \n",
+    "\n",
     "        input_size = num_qubits - 1\n",
-    "        \n",
+    "\n",
     "        # determine number of circuits to execute for this group\n",
     "        num_circuits = min(2, max_circuits)\n",
-    "        \n",
+    "\n",
     "        print(f\"************\\nExecuting [{num_circuits}] circuits with num_qubits = {num_qubits}\")\n",
-    "        \n",
+    "\n",
     "        # loop over only 2 circuits\n",
-    "        for type in range( num_circuits ):\n",
-    "            \n",
+    "        for type in range(num_circuits):\n",
+    "\n",
     "            # create the circuit for given qubit size and secret string, store time metric\n",
     "            ts = time.time()\n",
     "            qc = DeutschJozsa(num_qubits, type)\n",
-    "            metrics.store_metric(num_qubits, type, 'create_time', time.time()-ts)\n",
+    "            metrics.store_metric(num_qubits, type, \"create_time\", time.time() - ts)\n",
     "\n",
     "            # collapse the sub-circuit levels used in this benchmark (for qiskit)\n",
     "            qc2 = qc.decompose()\n",
+    "            \n",
+    "            job = backend.run(qc2, shots=100)\n",
+    "            \n",
+    "            print(job.status().value)\n",
     "\n",
+    "            # Get result of job\n",
+    "            result = job.result()\n",
+    "\n",
+    "            # Print job counts\n",
+    "            print(result.get_counts())\n",
     "            # submit circuit for execution on target (simulator, cloud simulator, or hardware)\n",
-    "            ex.submit_circuit(qc2, num_qubits, type, num_shots)\n",
-    "        \n",
+    "            #ex.submit_circuit(qc2, num_qubits, type, num_shots)\n",
+    "\n",
     "        # Wait for some active circuits to complete; report metrics when groups complete\n",
-    "        ex.throttle_execution(metrics.finalize_group)\n",
-    "    \n",
+    "        #ex.throttle_execution(metrics.finalize_group)\n",
+    "\n",
     "    # Wait for all active circuits to complete; report metrics when groups complete\n",
-    "    ex.finalize_execution(metrics.finalize_group)\n",
+    "    #ex.finalize_execution(metrics.finalize_group)\n",
     "\n",
     "    # print a sample circuit\n",
-    "    print(\"Sample Circuit:\"); print(QC_ if QC_ != None else \"  ... too large!\")\n",
-    "    print(\"\\nConstant Oracle 'Uf' =\"); print(C_ORACLE_ if C_ORACLE_ != None else \" ... too large or not used!\")\n",
-    "    print(\"\\nBalanced Oracle 'Uf' =\"); print(B_ORACLE_ if B_ORACLE_ != None else \" ... too large or not used!\")\n",
+    "    print(\"Sample Circuit:\")\n",
+    "    print(QC_ if QC_ != None else \"  ... too large!\")\n",
+    "    print(\"\\nConstant Oracle 'Uf' =\")\n",
+    "    print(C_ORACLE_ if C_ORACLE_ != None else \" ... too large or not used!\")\n",
+    "    print(\"\\nBalanced Oracle 'Uf' =\")\n",
+    "    print(B_ORACLE_ if B_ORACLE_ != None else \" ... too large or not used!\")\n",
     "\n",
     "    # Plot metrics for all circuit sizes\n",
-    "    metrics.plot_metrics(\"Benchmark Results - Deutsch-Jozsa - Qiskit\")"
+    "    #metrics.plot_metrics(\"Benchmark Results - Deutsch-Jozsa - Qiskit\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f2244b43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deutsch-Jozsa Benchmark Program - Qiskit\n",
+      "... execution starting at Jun 21, 2022 16:43:57 UTC\n",
+      "************\n",
+      "Executing [2] circuits with num_qubits = 3\n",
+      "job is queued\n",
+      "{'00': 100}\n",
+      "job is queued\n",
+      "{'11': 100}\n",
+      "************\n",
+      "Executing [2] circuits with num_qubits = 4\n",
+      "job is queued\n",
+      "{'000': 100}\n",
+      "job is queued\n",
+      "{'111': 100}\n",
+      "************\n",
+      "Executing [2] circuits with num_qubits = 5\n",
+      "job is queued\n",
+      "{'0000': 100}\n",
+      "job is queued\n",
+      "{'1111': 100}\n",
+      "************\n",
+      "Executing [2] circuits with num_qubits = 6\n",
+      "job is queued\n",
+      "{'00000': 100}\n",
+      "job is queued\n",
+      "{'11111': 100}\n",
+      "************\n",
+      "Executing [2] circuits with num_qubits = 7\n",
+      "job is queued\n",
+      "{'000000': 100}\n",
+      "job is queued\n",
+      "{'111111': 100}\n",
+      "************\n",
+      "Executing [2] circuits with num_qubits = 8\n",
+      "job is queued\n",
+      "{'0000000': 100}\n",
+      "job is queued\n",
+      "{'1111111': 100}\n",
+      "Sample Circuit:\n",
+      "      ┌───┐      ░ ┌─────┐ ░ ┌───┐      ░ ┌─┐            \n",
+      "q8_0: ┤ H ├──────░─┤0    ├─░─┤ H ├──────░─┤M├────────────\n",
+      "      ├───┤      ░ │     │ ░ ├───┤      ░ └╥┘┌─┐         \n",
+      "q8_1: ┤ H ├──────░─┤1    ├─░─┤ H ├──────░──╫─┤M├─────────\n",
+      "      ├───┤      ░ │     │ ░ ├───┤      ░  ║ └╥┘┌─┐      \n",
+      "q8_2: ┤ H ├──────░─┤2    ├─░─┤ H ├──────░──╫──╫─┤M├──────\n",
+      "      ├───┤      ░ │  Uf │ ░ ├───┤      ░  ║  ║ └╥┘┌─┐   \n",
+      "q8_3: ┤ H ├──────░─┤3    ├─░─┤ H ├──────░──╫──╫──╫─┤M├───\n",
+      "      ├───┤      ░ │     │ ░ ├───┤      ░  ║  ║  ║ └╥┘┌─┐\n",
+      "q8_4: ┤ H ├──────░─┤4    ├─░─┤ H ├──────░──╫──╫──╫──╫─┤M├\n",
+      "      ├───┤┌───┐ ░ │     │ ░ ├───┤┌───┐ ░  ║  ║  ║  ║ └╥┘\n",
+      "q8_5: ┤ X ├┤ H ├─░─┤5    ├─░─┤ H ├┤ X ├─░──╫──╫──╫──╫──╫─\n",
+      "      └───┘└───┘ ░ └─────┘ ░ └───┘└───┘ ░  ║  ║  ║  ║  ║ \n",
+      "c8: 5/═════════════════════════════════════╩══╩══╩══╩══╩═\n",
+      "                                           0  1  2  3  4 \n",
+      "\n",
+      "Constant Oracle 'Uf' =\n",
+      "          \n",
+      "q_0: ─────\n",
+      "          \n",
+      "q_1: ─────\n",
+      "          \n",
+      "q_2: ─────\n",
+      "          \n",
+      "q_3: ─────\n",
+      "          \n",
+      "q_4: ─────\n",
+      "     ┌───┐\n",
+      "q_5: ┤ X ├\n",
+      "     └───┘\n",
+      "\n",
+      "Balanced Oracle 'Uf' =\n",
+      "     ┌───┐ ░                           ░ ┌───┐\n",
+      "q_0: ┤ X ├─░───■───────────────────────░─┤ X ├\n",
+      "     └───┘ ░   │                       ░ └───┘\n",
+      "q_1: ──────░───┼────■──────────────────░──────\n",
+      "     ┌───┐ ░   │    │                  ░ ┌───┐\n",
+      "q_2: ┤ X ├─░───┼────┼────■─────────────░─┤ X ├\n",
+      "     └───┘ ░   │    │    │             ░ └───┘\n",
+      "q_3: ──────░───┼────┼────┼────■────────░──────\n",
+      "     ┌───┐ ░   │    │    │    │        ░ ┌───┐\n",
+      "q_4: ┤ X ├─░───┼────┼────┼────┼────■───░─┤ X ├\n",
+      "     └───┘ ░ ┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐ ░ └───┘\n",
+      "q_5: ──────░─┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├─░──────\n",
+      "           ░ └───┘└───┘└───┘└───┘└───┘ ░      \n"
+     ]
+    }
+   ],
    "source": [
     "run()"
    ]
@@ -298,41 +447,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b8d7b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import qiskit\n",
-    "\n",
-    "import qiskit_superstaq as qss\n",
-    "\n",
-    "# SuperstaQ token retrieved through API\n",
-    "token = \"insert api token\"\n",
-    "\n",
-    "# Create provider using authorization token\n",
-    "superstaq = qss.SuperstaQProvider(token)\n",
-    "\n",
-    "# Retrieve backend from superstaq provider\n",
-    "backend = superstaq.get_backend(\"ibmq_qasm_simulator\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0774f448",
    "metadata": {},
    "outputs": [],
    "source": [
-    "job = backend.run(qc, shots=100)\n",
     "\n",
-    "# Get job status\n",
-    "print(job.status().value)\n",
     "\n",
-    "# Get result of job\n",
-    "result = job.result()\n",
-    "\n",
-    "# Print job counts\n",
-    "print(result.get_counts())"
+    "# Get job status\n"
    ]
   }
  ],
